# dndmaster

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  vcpkg.json
docs/: archs_and_classes.md  data.md  network.md  specs_and_req.md
scripts/linux/: build.sh  export.sh
scripts/macos/: build.sh  export.sh  setup.sh
scripts/windows/: build.bat  export.bat  setup.bat
src/: main.cpp
src/app/: IAppView.h  ViewCampaignHub.cpp  ViewCampaignHub.h  ViewCampaignSelect.cpp  ViewCampaignSelect.h  ViewCharacterEditor.cpp  ViewCharacterEditor.h  ViewMainMenu.cpp  ViewMainMenu.h  ViewSessionDashboard.cpp  ViewSessionDashboard.h
src/core/: engine.cpp  engine.h
src/data/: DatabaseEngine.h  IDatabaseEntity.h  ISerializable.h  MapEntity.h  NpcEntity.h  QueryBuilder.h  SessionEntity.h  TokenEntity.h
